--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -48,3 +48,7 @@ body{
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.dashboardImgWrapper{
+    max-width: 12.5rem;
+    margin: 0 auto;
+  }
