--- a/Angular/src/app/components/dashboard/speciality/speciality.component.html
+++ b/Angular/src/app/components/dashboard/speciality/speciality.component.html
@@ -9,6 +9,7 @@
         <tr>
             <th scope="col">#</th>
             <th scope="col">Name</th>
+            <th scope="col">image</th>
          
             <th scope="col"></th>
         </tr>
@@ -17,7 +18,11 @@
         <tr *ngFor="let sp of allSpecialities;let i=index">
             <th scope="row">{{i+(pageSize*(currentPageNumber-1))+1}}</th>
             <td>{{ sp.name }}</td>
-          
+            <td>
+                <div class="dashboardImgWrapper">
+                    <img class="img-thumbnail img-fluid w-100" [src]="createImgPath(sp.image)" alt="category image">
+                </div>
+            </td>
             <td>
                 <button class="btn btn-success mx-2" data-toggle="modal" data-target="#addAndUpdateModel" (click)="openUpdateSpecialtyyModal(sp.id)">Update</button>
                 <button class="btn btn-danger mx-2" (click)="openDeleteSpecialtyModal(sp.id)" data-toggle="modal" data-target="#confirmationModal">Delete</button>
@@ -65,6 +70,15 @@
                         <input formControlName="name" type="text" class="form-control" placeholder="Name" name="name" [class.is-invalid]="formFields.name?.invalid && formFields.name?.touched">
                       
                     </div>
+                    <div class="form-group my-3">
+                        <label>Upload peronal image</label>
+                        <div class="inputWrapper float-right">
+                          <app-upload (onUploadFinished)="uploadFinished($event)"></app-upload>
+                          <div class="imgWrapper">
+                            <img class="w-100" [src]="createImgPath(response.dbPath)" alt="">
+                          </div>
+                        </div>
+                      </div>
                 
                 </div>
                 <div class="modal-footer">
