Manage Suggestions doctors for patient

--- a/Angular/src/app/components/home-page/home-page.component.html
+++ b/Angular/src/app/components/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 
 
 
-
+<app-suggestion-doctors></app-suggestion-doctors>
 
 <div class="offerSection p-3">
   <div class="container offerSlider pt-4">
