--- a/Angular/src/app/components/client/client-footer/client-footer.component.html
+++ b/Angular/src/app/components/client/client-footer/client-footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-2 bg-primary text-white pb-4 ">
+<div class="container-fluid mt-3 text-white pb-4" style="background-color: rgb(0, 112, 205)">
   <div class="row pt-3">
     <div class="col-6 col-sm-3 ml-0">
       <div class="ml-4">
@@ -44,22 +44,22 @@
     </div>
 
 
-    <div class=" col-6 col-sm-3">
+    <div class="col-6 col-sm-3" style="display: flex;flex-direction: column;">
       <a href="#">
-        <img src="../../../../assets/images/google_play.jpg" class="img-fluid " alt="Logo">
+        <img src="../../../../assets/images/google_play.jpg" class="img-fluid" alt="Logo">
       </a>
 
       <a href="#" class="">
         <img src="../../../../assets/images/app-store.jpg" class="img-fluid mt-4" alt="Logo">
       </a>
       <div class="row mt-3">
-        <div class="col-3">
+        <div class="col-2">
           <a href="#" class="text-white text-decoration-none "><i class="fab fa-facebook-f"></i></a>
         </div>
-        <div class="col-3">
+        <div class="col-2">
             <a href="#" class="text-white text-decoration-none "><i class="fab fa-linkedin-in"></i></a>
         </div>
-        <div class="col-3">
+        <div class="col-2">
           <a href="" class="text-white text-decoration-none "><i class="fab fa-twitter"></i></a>
         </div>
 
