--- a/Angular/src/app/components/client/client-header/client-header.component.html
+++ b/Angular/src/app/components/client/client-header/client-header.component.html
@@ -12,7 +12,7 @@
         
         <a class="nav-item nav-link mr-5" routerLink="ClientOffer/offers">Offers</a>
           
-        <a class="nav-item nav-link mr-5" routerLink="dashboard" *ngIf="isLoggedIn()">Dashboard</a>
+        <a class="nav-item nav-link mr-5" routerLink="dashboard" *ngIf="isUserAdmin()">Dashboard</a>
         <a class="nav-item nav-link signUp border" routerLink="registerUser" *ngIf="!isLoggedIn()">Sign up</a>
         <a class="nav-item nav-link border-right" routerLink="login" *ngIf="!isLoggedIn()">Login</a>
         <a class="nav-item nav-link border-right" (click)="Logout()" *ngIf="isLoggedIn()">Logout</a>
