--- a/Angular/src/app/components/client/show-doctor-details/show-doctor-details.component.html
+++ b/Angular/src/app/components/client/show-doctor-details/show-doctor-details.component.html
@@ -1,4 +1,4 @@
-<div class="px-5 d-flex" style="background-color: cadetblue;">
+<div class="px-5 d-flex">
 
     <div class="col-7 mr-3 mt-3">
         <div class="card mb-3">
@@ -97,7 +97,7 @@
                         data-toggle="modal" data-target="#exampleModal">
                         <div class="col-3  mt-2" *ngFor="let item of doctor.clinic_Images;let i=index">
                             <img [src]="createImgPath(item.image)" class="img-fluid" data-target="#carouselExample"
-                                data-slide-to="{{i}}">
+                                data-slide-to="{{i}}" style="height: 10rem;">
                         </div>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
             </div>
         </div>
 
-        <div class="card mb-3 p-3">
+        <div class="card mb-3 p-3" *ngIf="hasRate">
             <div class="row">
                 <i class="fas fa-star-half-alt col-1 fa-2x"></i>
                 <div class="col-md-10">
@@ -176,7 +176,7 @@
            
     
     </div>
-    <div class="card text-center">
+    <div class="card text-center" *ngIf="doctorRates.getRatingDtos.length>0">
         <a class="py-2 text-decoration-none" style="cursor: pointer;"  (click)="ShowMoreComment()">Show More..</a>
     </div>
 
