--- a/Angular/src/app/components/show-doctors-page/filter-doctor-data/filter-doctor-data.component.html
+++ b/Angular/src/app/components/show-doctors-page/filter-doctor-data/filter-doctor-data.component.html
@@ -1,4 +1,3 @@
-
 <div *ngIf="!IsContainDoctor" style="display: flex;justify-content: center">
     <p class="pt-5" style="font-size: 40px;color: brown;">
         there is no doctors that match your search
@@ -28,29 +27,53 @@
             <div class="col-md-4  border-primary" (click)="ShowDetails(doctor.userId)" style="cursor: pointer;">
                 <div class="card-body col-12">
                     <h4 class="card-title text-primary">Doctor : {{doctor.user.fullName}}</h4>
-                    <div class="card-text">
-                        <i class="fas fa-stethoscope p-2"></i>Doctor in {{doctor.specialty.name}} subspecailize
-                        in
-                        <span *ngFor="let sub of doctor.subspecails" style="color: cadetblue;">{{sub.name}},
-                        </span>
+
+                    <bar-rating [rate]="doctor.averageRate" [theme]="'default'" [readOnly]="true" [max]="5">
+                    </bar-rating>
+
+                    <div class="card-text d-flex">
+                        <i class="fas fa-stethoscope p-2"></i>
+                        <div>
+                            Doctor in {{doctor.specialty.name}} subspecailize
+                            in
+                            <span *ngFor="let sub of doctor.subspecails" style="color: cadetblue;">{{sub.name}},
+                            </span>
+                        </div>
+
                     </div>
-                    <div class="card-text">
-                        <i
-                            class="fas fa-map-marker-alt p-2"></i>{{doctor.clinicCityName}}-{{doctor.clinicAreaName}}-{{doctor.clinic.street}}
+                    <div class="card-text d-flex  mt-2">
+                        <div>
+                            <i class="fas fa-map-marker-alt p-2"></i>
+                        </div>
+
+                        <div class="pt-1">
+                            {{doctor.clinicCityName}}-{{doctor.clinicAreaName}}-{{doctor.clinic.street}}
+                        </div>
                     </div>
-                    <div class="card-text">
-                        <i class="fas fa-money-bill-wave p-2"></i> Check Price {{doctor.clinic.fees}} EGP
+                    <div class="card-text d-flex  mt-2">
+                        <i class="fas fa-money-bill-wave p-2"></i>
+                        <div class="pt-1">
+                            Check Price {{doctor.clinic.fees}} EGP
+                        </div>
                     </div>
 
-                    <div class="card-text">
-                        <i class="far fa-clock p-2"></i> Waiting time {{doctor.clinic.watingTime}}
+                    <div class="card-text d-flex  mt-2">
+                        <i class="far fa-clock p-2"></i>
+                        <div class="pt-1">
+                            Waiting time {{doctor.clinic.watingTime}}
+                        </div>
                     </div>
 
-                    <p class="card-text">
-                        <i class="fas fa-phone p-2"></i><span style="color: cornflowerblue;">
-                            +{{doctor.user.phoneNumber}}</span> (As ordinary price
-                        for minute)
-                    </p>
+                    <div class="card-text d-flex mt-2">
+                        <i class="fas fa-phone p-2"></i>
+
+                        <div>
+                            <span style="color: cornflowerblue;">
+                                +{{doctor.user.phoneNumber}}</span> (As ordinary price
+                            for minute)
+                        </div>
+
+                    </div>
                 </div>
             </div>
 
@@ -69,8 +92,7 @@
                                     <button class="btn btn-primary w-100">{{ day.datee |
                                         date:'MMMM d'}}</button>
 
-                                    <div style="text-align: center;" class="appointment mt-3"
-                                        *ngIf="day.IsWork">
+                                    <div style="text-align: center;" class="appointment mt-3" *ngIf="day.IsWork">
                                         <div *ngFor="let shift of day._dayShift"
                                             (click)="reserve(shift.id,doctor.user.userName,day.datee)"
                                             class="mb-2 border clickReserve rounded">
@@ -81,8 +103,7 @@
                                         </div>
 
                                     </div>
-                                    <div style="text-align: center;" class="appointment mt-3"
-                                        *ngIf="!day.IsWork">
+                                    <div style="text-align: center;" class="appointment mt-3" *ngIf="!day.IsWork">
                                         <p>no available appointment</p>
                                     </div>
                                     <button class="btn btn-danger w-100" [disabled]="!day.IsWork">احجز</button>
