--- a/Angular/src/app/app.component.html
+++ b/Angular/src/app/app.component.html
@@ -1,6 +1,5 @@
-<!-- <app-client-header></app-client-header>
+<app-client-header></app-client-header>
 
 <router-outlet></router-outlet> 
 
-<app-client-footer></app-client-footer> -->
-<app-extra-information></app-extra-information>
+<app-client-footer></app-client-footer>
