--- a/Angular/src/app/components/dashboard/dashboard.component.html
+++ b/Angular/src/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   
   <div class="row">
-    <div class="pl-0 col-2">
+    <div class="pl-0 col-sm-12 col-md-2 ">
       <app-dashboard-sidebar></app-dashboard-sidebar>
     </div>
     <div class="col-10">
