--- a/Angular/src/app/components/client-offer/offer-navbar/offer-navbar.component.html
+++ b/Angular/src/app/components/client-offer/offer-navbar/offer-navbar.component.html
@@ -17,7 +17,7 @@
                         <span> <i class="fas fa-chevron-down"></i> </span>
                     </a>
                     <div class="dropdown-menu p-0" aria-labelledby="navbarDropdownMenuLink">
-                        <div class="row">
+                        <div class="row m-0">
                             <div class="col-3 ">
                                 <div class="sidebar">
                                     <div class="nav flex-column nav-pills  " id="v-pills-tab" role="tablist"
