--- a/Angular/src/app/components/search/search.component.html
+++ b/Angular/src/app/components/search/search.component.html
@@ -2,8 +2,12 @@
   <div id="carouselExampleCaptions" class="carousel slid" data-ride="carousel">
 
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item active d-none d-md-block">
         <img src="assets/Image/search-header-background.jpg" class="d-block w-100 carousel-image">
+      </div>
+      
+      <div class="carousel-item active d-block d-md-none">
+        <img src="assets/Image/search-header-background2.jpg" class="d-block w-100 carousel-image">
       </div>
 
       <div class="carousel-caption d-none d-md-block">
