Order doctor By rating + Add image to register doctor +modify doctor offer image insertation

--- a/Angular/src/app/components/dashboard/dashboard.component.html
+++ b/Angular/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-dashboard-header></app-dashboard-header>
+<!-- <app-dashboard-header></app-dashboard-header> -->
 <div class="container-fluid">
   
   <div class="row">
