--- a/Angular/src/app/components/dashboard/doctor-attachments/doctor-attachments.component.html
+++ b/Angular/src/app/components/dashboard/doctor-attachments/doctor-attachments.component.html
@@ -1,10 +1,10 @@
 <h2 class="text-center display-4 font-weight-bold my-5"> Binding Doctor Attachments</h2>
-<label class="h6 mr-2">Status:</label>
+<!-- <label class="h6 mr-2">Status:</label> -->
 
-<select class="form-control w-25 mb-3 d-inline-block" #status (change)="StatusChanged(status.value)">
+<!-- <select class="form-control w-25 mb-3 d-inline-block" #status (change)="StatusChanged(status.value)">
     <option value="NotAccepted">Not Accepted</option>
     <option value="Accepted">Accepted</option>
-</select>
+</select> -->
 
 <table class="table table-bordered table-hover" *ngIf="hasDoctorAttachments">
     <thead class="">
