--- a/Angular/src/app/components/client/client-rate/client-rate.component.html
+++ b/Angular/src/app/components/client/client-rate/client-rate.component.html
@@ -17,7 +17,7 @@
 
 
 
-                <div class="mt-5">
+                <div class="mt-5 text-right">
                     <button class="btn btn-primary mr-3 col-3" (click)="Onsubmit()" [disabled]="RateForm.invalid">
                         Rate Now
                     </button>
