--- a/Angular/src/app/components/client/show-reservation-to-patient/show-reservation-to-patient.component.html
+++ b/Angular/src/app/components/client/show-reservation-to-patient/show-reservation-to-patient.component.html
@@ -1,4 +1,4 @@
-<div class="container py-4">
+<div class="container py-4" style="overflow-x: auto;">
     <table class="table table-striped">
         <thead>
             <tr>
