--- a/Angular/src/app/components/client/show-reservation-to-doctor/show-reservation-to-doctor.component.html
+++ b/Angular/src/app/components/client/show-reservation-to-doctor/show-reservation-to-doctor.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid py-4">
+<div class="container-fluid py-4" style="overflow-x: auto;">
     <table class="table table-striped">
         <thead>
             <tr>
