Edit clinic service

--- a/Angular/src/app/components/user-information/reset-password/reset-password.component.html
+++ b/Angular/src/app/components/user-information/reset-password/reset-password.component.html
@@ -4,13 +4,13 @@
     </div>
 
 
-    <div class="d-flex" style="justify-content: center;">
+    <div class="row" style="justify-content: center;">
 
 
         <form [formGroup]="ResetForm" (ngSubmit)="ResetPassword()" class="p-5 border col-12">
-            <div class="form-group d-flex">
-                <label for="OldPassword" class="col-3">Old Password <span class="text-danger pl-1"> *</span></label>
-                <div class="col-9">
+            <div class="form-group row">
+                <label for="OldPassword" class="col-md-3">Old Password <span class="text-danger pl-1"> *</span></label>
+                <div class="col-md-9 col-sm-11">
                     <input type="password" formControlName="OldPassword" class="form-control" placeholder="Enter Old Password"
                         name="OldPassword">
                     <div *ngIf="formFields.OldPassword.invalid && formFields.OldPassword.touched">
@@ -22,9 +22,9 @@
             </div>
 
 
-            <div class="form-group d-flex">
-                <label for="PasswordHash" class="col-3">New Password <span class="text-danger pl-1"> *</span></label>
-                <div class="col-9">
+            <div class="form-group row">
+                <label for="PasswordHash" class="col-md-3">New Password <span class="text-danger pl-1"> *</span></label>
+                <div class="col-md-9 col-sm-11">
                     <input type="password" formControlName="PasswordHash" class="form-control" placeholder="Enter New Password"
                         name="PasswordHash">
                     <div *ngIf="formFields.PasswordHash.invalid && formFields.PasswordHash.touched">
@@ -37,9 +37,9 @@
             </div>
 
 
-            <div class="form-group d-flex">
-                <label for="confirmPassword" class="col-3">Confirm Password <span class="text-danger pl-1"> *</span></label>
-                <div class="col-9">
+            <div class="form-group row">
+                <label for="confirmPassword" class="col-md-3">Confirm Password <span class="text-danger pl-1"> *</span></label>
+                <div class="col-md-9 col-sm-11">
 
 
                     <input type="password" formControlName="confirmPassword" class="form-control"
@@ -60,7 +60,7 @@
 
 
             <div class="mt-5">
-                <button class="btn btn-danger mr-3 col-3" [disabled]="ResetForm.invalid">
+                <button class="btn btn-danger mr-3 col-md-3" [disabled]="ResetForm.invalid">
                     Reset Now
                 </button>
                
