--- a/Angular/src/app/components/dashboard/clinic-services/clinic-services.component.html
+++ b/Angular/src/app/components/dashboard/clinic-services/clinic-services.component.html
@@ -3,6 +3,10 @@
 <button class="btn btn-primary mb-2 dBAddNewBtn" data-toggle="modal" data-target="#addAndUpdateModel" (click)="openAddClinicServicesModal();">
   New
 </button>
+<!-- <select class="form-control w-25 mb-3 d-inline-block" >
+    <option value="ByAdmin">By Admin</option>
+    <option value="ByDoctor">By Doctor</option>
+</select> -->
 
 <table class="table table-bordered table-hover" *ngIf="hasClinicServices">
     <thead class="">
@@ -21,6 +25,8 @@
             <td>
                 <button class="btn btn-success mx-2" data-toggle="modal" data-target="#addAndUpdateModel" (click)="openUpdateClinicServicesModal(cs.id)">Update</button>
                 <button class="btn btn-danger mx-2" (click)="openDeleteClinicServiceModal(cs.id)" data-toggle="modal" data-target="#confirmationModal">Delete</button>
+                <button class="btn btn-primary mx-2" *ngIf="!cs.byAdmin;" (click)="AcceptClinicService(cs.id)">Accept</button>
+
             </td>
         </tr>
     </tbody>
