--- a/Angular/src/app/components/doctor-dashboard/choose-clinic-service/choose-clinic-service.component.html
+++ b/Angular/src/app/components/doctor-dashboard/choose-clinic-service/choose-clinic-service.component.html
@@ -32,8 +32,8 @@
                       </div>
                   </div>
                   <div>
-                      <button class="btn btn-primary m-1 sss" (click)="removefromNewSubSpecial(sup.id)" *ngFor="let sup of NotAcceptByAdminClinicServicesSelected">{{sup.name}} <i class="fas fa-times-circle"></i></button>
-                      <button class="btn btn-primary m-1 sss" (click)="removefromNewSubSpecial(sup.id)" *ngFor="let sup of addNewClinicServices">{{sup.name}} <i class="fas fa-times-circle"></i></button>
+                      <button class="btn btn-primary m-1 sss" (click)="removefromNotAcceptedClinicServices(i)" *ngFor="let sup of NotAcceptByAdminClinicServicesSelected;let i=index">{{sup.name}} <i class="fas fa-times-circle"></i></button>
+                      <button class="btn btn-primary m-1 sss"  *ngFor="let sup of addNewClinicServices;let i=index" (click)="removefromNewClinicServices(i)">{{sup.name}} <i class="fas fa-times-circle"></i></button>
                   </div>
                   <!-- <span class="text-warning" *ngIf="addNewSubSpecialty.length>0 || NotAcceptByAdminSubSpecialtySelected.length>0">* after enter this waiting to accept by admin</span> -->
                   
